--- a/apps/my-app/package.json
+++ b/apps/my-app/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "common": "workspace:*",
+    "cm-components": "workspace:*",
     "eslint": "^8",
     "eslint-config-next": "14.2.3"
   }
