--- a/packages/cm-components/package.json
+++ b/packages/cm-components/package.json
@@ -2,9 +2,11 @@
   "name": "cm-components",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
+  "main": "./dist/components/index.d.ts",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": " vite build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
@@ -14,7 +16,8 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.4.0",
@@ -35,6 +38,8 @@
     "postcss": "^8",
     "storybook": "^8.1.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^5.2.0",
+    "vite-plugin-dts": "^3.9.1"
   }
 }
