--- a/apps/my-app/package.json
+++ b/apps/my-app/package.json
@@ -6,23 +6,39 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:nexus": "nodemon --exec 'ts-node --transpile-only -P nexus.tsconfig.json app/api/graphql/route' --ext 'ts' --watch '*/graphql/**/*.ts'",
+    "generate:genql": "nodemon --exec 'genql --schema ./graphql/schema.graphql --output graphql/generated/genql'  --watch 'graphql/schema.graphql'",
+    "generate": "concurrently \"npm run generate:nexus\" \"npm run generate:genql\""
+
   },
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "graphql": "^16.8.1",
+    "graphql-scalars": "^1.23.0",
+    "graphql-ws": "^5.16.0",
+    "graphql-yoga": "^5.3.1",
+    "next": "14.2.3",
+    "nexus": "^1.3.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@genql/cli": "^6.3.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "common": "workspace:*",
     "cm-components": "workspace:*",
+    "common": "workspace:*",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "nodemon": "^3.1.0",
+    "postcss": "^8",
+    "prisma": "^5.14.0",
+    "tailwindcss": "^3.4.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5"
   }
 }
