--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "video.js": "^8.12.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -22,6 +21,8 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "common": "workspace:*",
+    "cm-component": "workspace:*"
   }
 }
