--- a/apps/next-app/package.json
+++ b/apps/next-app/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
+    "@tanstack/react-table": "^8.17.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
@@ -17,12 +19,12 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cm-component": "workspace:*",
+    "common": "workspace:*",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5",
-    "common": "workspace:*",
-    "cm-component": "workspace:*"
+    "typescript": "^5"
   }
 }
